--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "nodemysql",
+  "name": "livraria",
   "version": "1.0.0",
-  "description": "Node com MySQL para curso de desenvolvimento WEB da PUD",
-  "main": "index.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \\\\\\\"Error: no Test specified\\\\\\\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "Node",
-    "MySQL",
-    "JavScript"
-  ],
-  "author": "Romulo Scotelaro",
+  "author": "pud engenhoca criative software",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mysql": "^2.17.1"
-  },
-  "devDependencies": {}
+    "mysql": "^2.18.1"
+  }
 }
